--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
-<html>
+/*<!DOCTYPE html>
+<html lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <title>弹跳彩球</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Sequencing Animations</title>
+    <script type="text/javascript" src="main.js" defer></script>
+    <link href="style.css"rel="stylesheet">
   </head>
 
   <body>
-    <h1>闪动的千纸鹤</h1>
-    <canvas></canvas>
 
-    <script src="main.js"></script>
+    <div id="alice-container">
+      <img id="alice1"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
+      <img id="alice2"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
+      <img id="alice3"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
+    </div>
+
   </body>
-</html>
+
+</html>*/
