--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
-/*<!DOCTYPE html>
-<html lang="en-US">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Sequencing Animations</title>
-    <script type="text/javascript" src="main.js" defer></script>
-    <link href="style.css"rel="stylesheet">
+    <meta charset="utf-8">
+    <title>弹跳彩球</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <h1>弹跳彩球</h1>
+    <p>剩余彩球数：</p>
+    <canvas></canvas>
 
-    <div id="alice-container">
-      <img id="alice1"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
-      <img id="alice2"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
-      <img id="alice3"  src="alice.svg" role="img" alt="silhouette of crouching long haired character in dress and short boots">
-    </div>
-
+    <script src="main.js"></script>
   </body>
-
-</html>*/
+</html>
