--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +52,8 @@
         <button id="roll-dice">掷骰子</button>
         <p id="dice-result"></p>
     </div>
-
+    <audio id="music" src="music/background-music.mp3" loop autoplay></audio>
+    <button id="start-game">开始游戏</button>
     <script src="script.js"></script>
 </body>
 </html>
